[package]
name = "openssl-cert-dioxius"
version = "0.1.0"
authors = ["rsundorf"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.3", features = [] }
zip = "6.0.0"
dirs = "6.0.0"
fake = { version = "4.0.0", features = ["url", "http"] }
eframe = "0.33.0"
egui = "0.33.0"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
