[package]
name = "openssl-cert-dioxius"
version = "0.1.0"
authors = ["rsundorf"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.33.0"
egui = "0.33.0"
zip = "6.0.0"
dirs = "6.0.0"
fake = { version = "4.0.0", features = ["url", "http"] }
log = "0.4.28"
env_logger = { version = "0.11.8", features = [] }
time = { version = "0.3.44", features = ["local-offset", "formatting", "macros"] }
